added an id of parts and changed new_home_part id to new_part in the part form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,7 +86,7 @@
                                   <div id="homeParts" class="list-group shadow">
                                     <% current_user.parts.each do |part| %>
 
-                                      <div id="parts">                   
+                                      <div id="parts">
                                       <div class="partbutton"><a href= '#partShowModal<%=part.id%>' data-toggle="modal" role="button" class="list-group-item"><img width=50 src= "<%=part.url%>"> <%=part.manufacturer%> <%=part.name%><br> <strong>Qty:</strong> <%=part.qty%> </a></div>
                                       </div>
                                     <div id="partShowModal<%=part.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
@@ -223,7 +223,7 @@
     Add Part
     </div>
     <div class="modal-body">
-        <%= form_for Part.new, :id => 'new_home_part', :class => 'form center-block' do |f| %>
+        <%= form_for Part.new, :id => 'new_part', :class => 'form center-block' do |f| %>
         <div class="form-group">
         <%= f.text_field :manufacturer, placeholder: "Manufacturer", :required => true , :class => 'form-control input-lg ' %><br>
         <%= f.text_field :name, placeholder: "Name", :required => true , :class => 'form-control input-lg' %><br>
