--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/parts.css">
-  <link rel="stylesheet" href="/css/new_form.css">
+  <link rel="stylesheet" href="/css/user_index.css">
 </head>
 <%= render "layouts/nav" %>
 
